# gather-metadata

./: .cookiecutter-replay.json  .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
gathermetadata/: __init__.py  __main__.py
