[project]
name = "gathermetadata"
description = "Collector for generic metadata of HPC execution environment focussed on benchmarking."
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Dennis Terhorst", email = "d.terhorst@fz-juelich.de" }
]

requires-python = ">=3.8"
dependencies = [
    "docopt-ng",
    "ruamel.yaml"
]

[metadata]
description-file = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0-or-later",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/INM-6/gather-metadata"
"Bug Tracker" = "https://github.com/INM-6/gather-metadata/issues"

[project.scripts]
gathermetadata = "gathermetadata.__main__:main"

[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "flake8",
    "mypy",
    "pre-commit",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-pydocstyle",
    "pytest-pylint",
    "pytest-xdist",
    "types-PyYAML",
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "pygments",
    "recommonmark",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.black]
line-length = 120

[tool.flake8]
# This is ignored
# see discussions around https://github.com/PyCQA/flake8/issues/234

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --ignore=conda --ignore=venv --ignore=.git --ignore=__pycache__"
norecursedirs = ".git _build venv tmp*"

[tool.pylint]
options = "unneeded-not, line-too-long, unnecessary-semicolon, trailing-whitespace, missing-final-newline, bad-indentation, multiple-statements, bare-except"

[tool.pylint.MASTER]
ignore-paths = '^venv/.*$'

[tool.mypy]
exclude = ".git/, .pytest_cache/, conda/, venv/"

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D300"
